--- a/styles/typography.css
+++ b/styles/typography.css
@@ -36,7 +36,33 @@ h1 {
 h2,
 strong,
 b {
-  font-weight: bold;
+  font-weight: bolder;
+}
+
+h3 {
+  position: relative;
+  border-bottom: 2px solid var(--color-lighter);
+  border-radius: 1px;
+  padding-bottom: 4px;
+  margin-bottom: 4px;
+  font-size: 12px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+h3::after {
+  content: '';
+  display: block;
+  position: absolute;
+  border-bottom: 2px solid var(--color-dark);
+  border-radius: 1px;
+  width: 50px;
+  bottom: -2px;
+  left: 0;
+}
+
+h4 {
+  font-weight: 900;
 }
 
 p,
