--- a/styles/1_header.css
+++ b/styles/1_header.css
@@ -1,39 +1,37 @@
 .header__picture {
-  grid-area: profilePicture;
-
-  width: var(--sidebar-size);
-  height: var(--sidebar-size);
+  width: calc(var(--sidebar-size) * 0.9);
+  height: calc(var(--sidebar-size) * 0.9);
+  margin: calc(var(--sidebar-size) * 0.05);
   z-index: 1;
   border-radius: 50%;
+  border: 5px solid var(--color-dark);
 }
 
 .header__content {
-  grid-area: profileContent;
-
-  padding: 25px 0;
   display: flex;
   flex-direction: column;
 }
 
 .header__content h1 {
-  font-size: 46px;
-  line-height: 48px;
+  font-size: 38px;
+  line-height: 46px;
   margin-bottom: 10px;
   color: var(--color-deep);
 }
 
 .header__content h2 {
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 23px;
   margin-bottom: 10px;
   color: var(--color-dark);
 }
 
 .header__content p {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 13px;
+  line-height: 14px;
   color: var(--color-grey);
   text-align: justify;
+  margin-bottom: 8px;
 }
 
 .header__content--contact {
@@ -50,5 +48,5 @@
 }
 
 .header__content--contact li b {
-  font-size: 12px;
+  font-size: 11px;
 }
