--- a/styles/2_skills.css
+++ b/styles/2_skills.css
@@ -1,24 +1,19 @@
 .skills {
-  grid-area: skills;
-
-  padding-inline-start: 15px;
+  padding-inline-start: 0.1in;
 }
 
 .skills h3 {
-  font-weight: bold;
-  font-size: 16px;
-  margin-bottom: 10px;
   color: var(--color-dark);
 }
 
 .skills__list {
   list-style: disc;
   padding-inline-start: 20px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .skills__list li {
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 12px;
+  line-height: 16px;
   color: var(--color-grey);
 }
