--- a/styles/1_header.css
+++ b/styles/1_header.css
@@ -1,10 +1,10 @@
 .header__picture {
-  width: calc(var(--sidebar-size) * 0.9);
-  height: calc(var(--sidebar-size) * 0.9);
-  margin: calc(var(--sidebar-size) * 0.05);
+  width: calc(var(--sidebar-size));
+  height: calc(var(--sidebar-size));
   z-index: 1;
   border-radius: 50%;
   border: 5px solid var(--color-dark);
+  box-sizing: border-box;
 }
 
 .header__content {
@@ -13,16 +13,16 @@
 }
 
 .header__content h1 {
-  font-size: 38px;
-  line-height: 46px;
-  margin-bottom: 10px;
+  font-size: 35px;
+  line-height: 38px;
+  margin-bottom: 8px;
   color: var(--color-deep);
 }
 
 .header__content h2 {
-  font-size: 20px;
-  line-height: 23px;
-  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 8px;
   color: var(--color-dark);
 }
 
