--- a/styles/3_xp.css
+++ b/styles/3_xp.css
@@ -6,19 +6,20 @@
   color: var(--color-dark);
 }
 
-.xp li {
+.xp > li {
   display: grid;
   grid-template-columns: var(--xp-logo-size) 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   grid-template-areas:
     'logo header'
-    'logo body';
+    'logo body'
+    'skills tags';
   gap: 10px;
   box-sizing: border-box;
   padding: 10px 0;
 }
 
-.xp li:not(:last-child) {
+.xp > li:not(:last-child) {
   border-bottom: 1px dotted var(--color-light);
 }
 
@@ -52,4 +53,12 @@
   line-height: 14px;
   font-weight: 300;
   color: var(--color-grey);
+}
+
+.cv__skills {
+  grid-area: skills;
+}
+
+.cv__tag--list {
+  grid-area: tags;
 }
