--- a/styles/5_page.css
+++ b/styles/5_page.css
@@ -1,27 +1,47 @@
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 10px;
-  z-index: 0;
+.cv__wrapper {
+  position: relative;
+
+  width: 210mm;
+  height: 297mm;
+  box-sizing: border-box;
+  overflow: hidden;
+  background-color: var(--color-bright);
 }
 
-header span {
+.cv__border {
   position: absolute;
-  top: -200px;
-  left: -200px;
-  width: 400px;
-  height: 400px;
-  background-image: linear-gradient(
-    90deg,
-    var(--color-light) 0%,
-    var(--color-light) 50%,
-    transparent 50%,
-    transparent 100%
-  );
-  background-repeat: repeat;
-  background-size: 2.5%;
-  transform: rotate(45deg);
-  z-index: -1;
+  width: 33%;
+  height: 100%;
+  background-color: var(--color-dark);
+  top: 0;
+  right: 0;
+}
+
+.cv__page {
+  position: relative;
+
+  width: calc(100% - 1in);
+  height: calc(100% - 1in);
+  box-sizing: border-box;
+  margin: 0.5in;
+
+  display: grid;
+  grid-template-columns: var(--sidebar-size) 1fr;
+  gap: 0.25in;
+}
+
+.cv__page aside {
+  display: grid;
+  grid-template-rows: var(--sidebar-size) auto;
+  gap: 0.25in;
+}
+
+.cv__page main {
+  grid-template-rows: calc(var(--sidebar-size) - 0.25in) auto auto auto;
+  display: grid;
+  gap: 0.25in;
+  background-color: var(--color-bright);
+  padding: 0.25in;
+  border-radius: 5px;
+  box-shadow: 0 0 0.25in #0001;
 }
