--- a/styles/general.css
+++ b/styles/general.css
@@ -1,4 +1,5 @@
 body {
+  min-width: 210mm;
   width: 100vw;
   overflow-x: hidden;
   min-height: 100vh;
@@ -12,56 +13,35 @@ body {
   font-family: Lato;
 }
 
-.cv__wrapper {
-  position: relative;
-
-  width: 210mm;
-  height: 297mm;
-  box-sizing: border-box;
-  overflow: hidden;
-  background-color: var(--color-bright);
-}
-
-.cv__border {
-  position: absolute;
-  width: 33%;
-  height: 100%;
-  background-color: var(--color-dark);
-  top: 0;
-  right: 0;
-}
-
-.cv__page {
-  position: relative;
-
-  width: calc(100% - 1in);
-  height: calc(100% - 1in);
-  box-sizing: border-box;
-  margin: 0.5in;
-
-  display: grid;
-  grid-template-columns: var(--sidebar-size) 1fr;
-  gap: 0.25in;
-}
-
-.cv__page aside {
-  display: grid;
-  grid-template-rows: var(--sidebar-size) auto;
-  gap: 0.25in;
-}
-
-.cv__page main {
-  grid-template-rows: calc(var(--sidebar-size) - 0.25in) auto auto auto;
-  display: grid;
-  gap: 0.25in;
-  background-color: var(--color-bright);
-  padding: 0.25in;
-  border-radius: 10px;
-  box-shadow: 0 0 0.25in #0002;
-}
-
 .cv__icon {
   width: 16px;
   height: 16px;
   margin-inline-end: 4px;
+}
+
+.cv__skills {
+  text-align: end;
+  font-size: 12px;
+  line-height: 20px;
+  color: var(--color-grey);
+}
+
+.cv__tag--list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.cv__tag {
+  font-size: 10px;
+  color: var(--color-bright);
+  background-color: var(--color-light);
+  line-height: 12px;
+  padding: 4px 8px;
+  border-radius: 10px;
+  text-shadow: 0px 1px 3px #0007;
+}
+
+.cv__tag:not(:last-child) {
+  margin-inline-end: 3px;
 }
