--- a/styles/5_page.css
+++ b/styles/5_page.css
@@ -45,3 +45,35 @@
   border-radius: 5px;
   box-shadow: 0 0 0.25in #0001;
 }
+
+.cv__mobile-overlay {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  pointer-events: none;
+  background-color: var(--color-bright);
+  box-sizing: border-box;
+  padding: 0.25in;
+}
+
+.cv__mobile-overlay h1 {
+  font-size: 18px;
+  text-align: center;
+  line-height: 24px;
+}
+
+@media screen and (max-width: 768px) {
+  .cv__wrapper {
+    display: none;
+  }
+
+  .cv__mobile-overlay {
+    display: flex;
+  }
+}
