--- a/styles/1_header.css
+++ b/styles/1_header.css
@@ -1,10 +1,8 @@
 .header__picture {
-  width: calc(var(--sidebar-size));
-  height: calc(var(--sidebar-size));
+  width: calc(var(--sidebar-size) - 0.5in);
+  height: calc(var(--sidebar-size) - 0.5in);
   z-index: 1;
-  border-radius: 50%;
-  border: 5px solid var(--color-dark);
-  box-sizing: border-box;
+  border-radius: 0.125in;
 }
 
 .header__content {
@@ -13,8 +11,10 @@
 }
 
 .header__content h1 {
-  font-size: 35px;
-  line-height: 38px;
+  font-family: Lora;
+  text-transform: uppercase;
+  font-size: 46px;
+  line-height: 50px;
   margin-bottom: 8px;
   color: var(--color-deep);
 }
@@ -29,6 +29,7 @@
 .header__content p {
   font-size: 12px;
   line-height: 14px;
+  font-weight: 400;
   color: var(--color-grey);
   margin-bottom: 8px;
 }
@@ -44,8 +45,10 @@
 .header__content--contact li {
   display: flex;
   align-items: center;
+  color: var(--color-smoke);
 }
 
 .header__content--contact li b {
   font-size: 11px;
+  color: inherit;
 }
