--- a/styles/3_xp.css
+++ b/styles/3_xp.css
@@ -16,11 +16,7 @@
     'skills tags';
   gap: 10px;
   box-sizing: border-box;
-  padding: 10px 0;
-}
-
-.xp > li:not(:last-child) {
-  border-bottom: 1px dotted var(--color-light);
+  padding-bottom: 30px;
 }
 
 .xp__logo {
@@ -32,7 +28,7 @@
 }
 
 .xp__header--title {
-  font-weight: bold;
+  font-weight: 700;
   color: var(--color-dark);
   font-size: 14px;
   margin-bottom: 4px;
@@ -45,13 +41,14 @@
 }
 
 .xp__header--position {
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .xp__body {
   font-size: 12px;
   line-height: 14px;
-  font-weight: 300;
+  font-weight: 400;
   color: var(--color-grey);
 }
 
