--- a/styles/5_page.css
+++ b/styles/5_page.css
@@ -5,45 +5,34 @@
   height: 297mm;
   box-sizing: border-box;
   overflow: hidden;
-  background-color: var(--color-bright);
-}
-
-.cv__border {
-  position: absolute;
-  width: 33%;
-  height: 100%;
-  background-color: var(--color-dark);
-  top: 0;
-  right: 0;
+  background-color: var(--color-darker);
 }
 
 .cv__page {
   position: relative;
 
-  width: calc(100% - 1in);
-  height: calc(100% - 1in);
+  width: calc(100%);
+  height: calc(100%);
   box-sizing: border-box;
-  margin: 0.5in;
 
   display: grid;
   grid-template-columns: var(--sidebar-size) 1fr;
-  gap: 0.25in;
+  /* gap: 0.25in; */
 }
 
 .cv__page aside {
   display: grid;
-  grid-template-rows: var(--sidebar-size) auto;
+  grid-template-rows: calc(var(--sidebar-size) - 0.5in) auto;
   gap: 0.25in;
+  padding: 0.25in;
 }
 
 .cv__page main {
-  grid-template-rows: calc(var(--sidebar-size) - 0.25in) auto auto;
+  grid-template-rows: calc(var(--sidebar-size) - 0.5in) auto auto;
   display: grid;
   gap: 0.25in;
   background-color: var(--color-bright);
   padding: 0.25in;
-  border-radius: 5px;
-  box-shadow: 0 0 0.25in #0001;
 }
 
 .cv__mobile-overlay {
