--- a/styles/typography.css
+++ b/styles/typography.css
@@ -29,6 +29,64 @@
   font-style: italic;
 }
 
+/*  */
+
+@font-face {
+  font-family: Oswald;
+  src: url('../assets/fonts/Oswald-ExtraLight.ttf') format('truetype');
+  font-weight: 100;
+}
+@font-face {
+  font-family: Oswald;
+  src: url('../assets/fonts/Oswald-Light.ttf') format('truetype');
+  font-weight: 300;
+}
+@font-face {
+  font-family: Oswald;
+  src: url('../assets/fonts/Oswald-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: Oswald;
+  src: url('../assets/fonts/Oswald-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+@font-face {
+  font-family: Oswald;
+  src: url('../assets/fonts/Oswald-SemiBold.ttf') format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: Oswald;
+  src: url('../assets/fonts/Oswald-Bold.ttf') format('truetype');
+  font-weight: bolder;
+}
+
+/*  */
+
+@font-face {
+  font-family: Lora;
+  src: url('../assets/fonts/Lora-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: Lora;
+  src: url('../assets/fonts/Lora-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+@font-face {
+  font-family: Lora;
+  src: url('../assets/fonts/Lora-SemiBold.ttf') format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: Lora;
+  src: url('../assets/fonts/Lora-Bold.ttf') format('truetype');
+  font-weight: bolder;
+}
+
+/*  */
+
 h1 {
   font-weight: 900;
 }
@@ -40,14 +98,16 @@ b {
 }
 
 h3 {
+  font-family: Oswald;
   position: relative;
   border-bottom: 2px solid var(--color-lighter);
   border-radius: 1px;
-  padding-bottom: 4px;
-  margin-bottom: 4px;
-  font-size: 13px;
+  padding-bottom: 7.5px;
+  margin-bottom: 7.5px;
+  font-size: 18px;
   font-weight: 900;
   text-transform: uppercase;
+  width: calc(100% + 0.25in);
 }
 
 h3::after {
@@ -59,6 +119,14 @@ h3::after {
   width: 50px;
   bottom: -2px;
   left: 0;
+}
+
+aside h3 {
+  border-color: var(--color-dark);
+}
+
+aside h3::after {
+  border-color: var(--color-grey);
 }
 
 h4 {
