--- a/styles/2_skills.css
+++ b/styles/2_skills.css
@@ -13,3 +13,23 @@
   line-height: 18px;
   color: var(--color-light);
 }
+
+.interests__list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2px;
+  align-items: center;
+  justify-items: center;
+}
+
+.interests__list li {
+  font-size: 12px;
+  line-height: 18px;
+  color: var(--color-light);
+}
+
+.interests__list li img {
+  width: 16px;
+  height: 16px;
+}
