--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,8 +4,8 @@
   --color-deep: #111;
   --color-darker: #222;
   --color-dark: #333;
-  --color-smoke: #777;
-  --color-grey: #aaa;
+  --color-smoke: #666;
+  --color-grey: #999;
   --color-light: #ccc;
   --color-lighter: #eee;
   --color-bright: #fff;
