--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,9 +5,9 @@
   --color-darker: #222;
   --color-dark: #333;
   --color-smoke: #666;
-  --color-grey: #999;
-  --color-light: #ccc;
-  --color-lighter: #eee;
+  --color-grey: #888;
+  --color-light: #bbb;
+  --color-lighter: #ddd;
   --color-bright: #fff;
 
   --xp-logo-size: 0.5in;
